hphp/hack/test/typecheck/generic_fst_bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

function fst<T1,T2>(T1 $x, T2 $y):T2 {
  return $x;
}
